fix letter spacing.

--- a/css/style.css
+++ b/css/style.css
@@ -1352,5 +1352,4 @@ a {
 .dyslexic {
   font-family: 'OpenDyslexic', sans-serif !important;
   line-height: 1.6;
-  letter-spacing: 0.02em;
 }
